force-app/main/default/objects/ucinn_portal_Recipient_Filter_Field__c/ucinn_portal_Recipient_Filter_Field__c.object-meta.xml
<CustomObject>
    <label>Recipient Filter Field</label>
    <nameField>
        <label>Recipient Filter Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipient Filter Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>