force-app/main/default/objects/ucinn_portal_Recipient_Filter_Field__c/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>