force-app/main/default/objects/ucinn_portal_Recipient_Filter_Field__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <formula>Recipient_Filter__r.Object_API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object API Name</label>
    <type>Text</type>
</CustomField>