force-app/main/default/objects/ucinn_portal_Recipient_Filter_Field__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>LIKE</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>NOT IN</fullName>
            </value>
            <value>
                <fullName>INCLUDES</fullName>
            </value>
            <value>
                <fullName>EXCLUDES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>