force-app/main/default/objects/ucinn_portal_Recipient_Filter_Field__c/fields/Recipient_Filter__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Filter__c</fullName>
    <label>Recipient Filter</label>
    <referenceTo>ucinn_portal_Recipient_Filter__c</referenceTo>
    <relationshipLabel>Recipient Filter Fields</relationshipLabel>
    <relationshipName>ucinn_portal_Recipient_Filter_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>